Improvements to animated opacity channel behavior.

Should fix resetting and removing opacity keys so that opacity
slider reflects the appropriate current value.

BUG:432825